--- a/templates/sharkwords.html
+++ b/templates/sharkwords.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sharkwords!</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" 
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
+            crossorigin="anonymous">
+    </script>
   </head>
   <body>
     <section id="shark-img">
@@ -18,5 +22,7 @@
     <section id="word-container"></section>
 
     <section id="letter-buttons"></section>
+
+    <script src="/static/js/sharkwords.js"></script>
   </body>
 </html>
